# CPURayTracing

./: .gitattributes  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPURayTracing.cpp  CPURayTracing.h  FileReader.h  ObjFileReader.cpp  ObjFileReader.h  PpmFileReader.cpp  PpmFileReader.h  README.md  rayTracer.cpp  rayTracer.h  rtColor.cpp  rtColor.h  rtLight.h  rtMaterial.cpp  rtMaterial.h  rtPoint.cpp  rtPoint.h  rtRay.cpp  rtRay.h  rtSphere.h  rtVector.cpp  rtVector.h
src/: CPURayTracing.cpp  FileReader.h  ObjFileReader.cpp  ObjFileReader.h  PpmFileReader.cpp  PpmFileReader.h  rayTracer.cpp  rayTracer.h  rtColor.cpp  rtColor.h  rtLight.cpp  rtLight.h  rtMaterial.cpp  rtMaterial.h  rtPoint.cpp  rtPoint.h  rtRay.cpp  rtSphere.cpp  rtSphere.h  rtVector.cpp  rtVector.h
test/InputFiles/: t_1d.txt  t_1d2.txt  t_house.txt  t_rainbow.txt
test/OutputFiles/: t_1d.ppm
test/Textures/: t_rainbowstripes.ppm  t_redwood.ppm  t_soccerball.ppm
