cmake_minimum_required (VERSION 3.8)

set(TARGET_NAME CPURayTracing)

project (${TARGET_NAME})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB RAYTRACING_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
file(GLOB RAYTRACING_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

add_executable (${TARGET_NAME} ${RAYTRACING_HEADERS} ${RAYTRACING_SOURCES})
